Fix intro text margin on small layout

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -26,8 +26,8 @@ header.masthead {
     }
   }
   .intro-text-small {
-    padding-top: 100px;
-    padding-bottom: 30px;
+    padding-top: 115px;
+    padding-bottom: 20px;
     .intro-lead-in {
       font-size: 22px;
       font-style: italic;
